fixed a bug where unknown kraken contigs were displayed in the wrong color in the fasta export panel

--- a/share/acdc/assets/style.css
+++ b/share/acdc/assets/style.css
@@ -121,6 +121,12 @@ td.contaminated {
   background-image: url(contaminated.png);
 }
 
+/* fieldsets */
+fieldset legend.highlight {
+  font-size: 16px;
+  font-weight: bold;
+}
+
 /* bars */
 #confidences td svg {
   display: block;
